[package]
name = "tcp-test"
version = "0.1.0"
authors = ["Tadej Vengust <vengust.tadej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "^1.6.2" }

[dev-dependencies]
async-std = { version = "^1.6.2", features = ["attributes"] }